@@ -38,7 +38,7 @@
 
 #include <string.h>
 
-static const uint16_t FIRMWARE_VERSION = 0x0610;
+static const uint16_t FIRMWARE_VERSION = 0x0611;
 
 // 1 flash row
 static const uint8_t DEFAULT_CONFIG[128] =
